# Modelos-y-Simulaciones

./: distros.ipynb  to_notebook.sh  to_py.sh
p2/: main.ipynb  main.py
p3/: main.py
p4/sols/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
p5/p2/: ej1.ipynb  ej1.py  ej3.ipynb  p2023.ipynb
p5/sols/: ej12.py  ej13.py  ej14.py  ej2.py  ej3.py  ej4.py  ej6.py  ej7.py  ej8.py  ej9.py  statsUtils.py
p6/sols/: ej1.py  ej2.py  ej3.py  ej4.py  ej5.py  ej6.py  ej7.py  iterUtils.py  p8.py
p7/sols/: ej1.py  ej10.py  ej2.py  ej3.py  ej4.py  ej5.py  ej6.py  ej7.py  ej8.py  ej9.py
p8/p23/: main.ipynb  recu.ipynb
p8/p24/: main.ipynb  verifs.py
parcial1/: Leiva_Ariel_parcial1.ipynb
statsutils/: LICENSE  README.md  pyproject.toml
statsutils/src/statutils/: analysis.py  execution.py
statsutils/tests/: test_analysis.py  test_execution.py
