[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statutils"
version = "0.0.1"
authors = [
  { name="Ariel Leiva", email="ariel.leiva@mi.unc.edu.ar" },
]
description = "A simple library of statistic tools"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ArielIvanLeiva/Modelos-y-Simulaciones"
Issues = "https://github.com/ArielIvanLeiva/Modelos-y-Simulaciones"

[project.optional-dependencies]
dev = ["pytest"]